<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/superWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_marginTop="@dimen/smallMargin"
        android:layout_marginBottom="@dimen/smallMargin"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/largeText"
        android:textColor="@color/note_list_text"
        android:id="@+id/titleDialog"
        android:text="@string/addnote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/note_list_text"
        android:layout_marginLeft="@dimen/smallMargin"
        android:layout_marginRight="@dimen/smallMargin"
        android:hint="@string/enternote"
        android:layout_below="@+id/titleDialog"
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="@dimen/settingText"
            android:paddingBottom="@dimen/miniMargin"
            android:paddingTop="@dimen/superSmallMargin"
            android:paddingLeft="@dimen/superSmallMargin"
            android:gravity="center_vertical"
            android:background="@color/grayItemSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/smallMargin"
        android:layout_marginRight="@dimen/smallMargin"
        android:weightSum="1"
        android:layout_marginBottom="@dimen/smallMargin"
        android:layout_marginTop="@dimen/smallMargin"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_marginRight="@dimen/smallMargin"
            android:layout_marginLeft="@dimen/smallMargin"
            android:layout_weight="0.5"
            app:cardBackgroundColor="@color/grayItemSetting"
            android:id="@+id/cancelAdd"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/smallElevation"
            app:cardUseCompatPadding="true"
            android:layout_width="0dp"
            android:layout_height="@dimen/heightButton">

            <TextView
                android:gravity="center"
                android:textColor="@color/note_list_text"
                android:textSize="@dimen/settingText"
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginRight="@dimen/smallMargin"
            android:layout_marginLeft="@dimen/smallMargin"
            android:layout_weight="0.5"
            app:cardBackgroundColor="@color/signOut"
            android:id="@+id/done"
            app:cardCornerRadius="0dp"
            app:cardElevation="@dimen/smallElevation"
            app:cardUseCompatPadding="true"
            android:layout_width="0dp"
            android:layout_height="@dimen/heightButton">

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/superWhite"
                android:textSize="@dimen/settingText"
                android:text="@string/done"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>