<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/superWhite"
    android:id="@+id/settingFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Fragment.SettingFragment">

    <RelativeLayout
        android:id="@+id/reltemp2"
        android:background="@color/grayItemSetting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingItemHeight">

        <ImageView
            android:id="@+id/image2"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/smallMargin"
            android:src="@drawable/identity"
            android:layout_width="@dimen/iconsetting"
            android:layout_height="@dimen/iconsetting" />

        <TextView
            android:id="@+id/identity"
            android:layout_toRightOf="@+id/image2"
            android:textColor="@color/note_list_text"
            android:layout_marginLeft="@dimen/smallMargin"
            android:textStyle="bold"
            android:textSize="@dimen/settingText"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/divider"
        android:layout_below="@+id/reltemp2"
        android:id="@+id/btChangePass"
        android:background="@color/grayItemSetting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingItemHeight">

        <ImageView
            android:id="@+id/image1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/smallMargin"
            android:src="@drawable/changepass"
            android:layout_width="@dimen/iconsetting"
            android:layout_height="@dimen/iconsetting" />

        <TextView
            android:layout_toLeftOf="@+id/arrow"
            android:layout_toRightOf="@+id/image1"
            android:textColor="@color/note_list_text"
            android:layout_marginLeft="@dimen/smallMargin"
            android:textStyle="bold"
            android:textSize="@dimen/settingText"
            android:gravity="center_vertical"
            android:text="@string/changepass"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_marginRight="@dimen/smallMargin"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/arrow_down"
            android:id="@+id/arrow"
            android:layout_width="@dimen/iconsetting"
            android:layout_height="@dimen/iconsetting" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/divider"
        android:background="@color/grayItemSetting"
        android:id="@+id/changePassLayout"
        android:visibility="invisible"
        android:layout_below="@+id/btChangePass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/changePassHeight">

        <android.support.design.widget.TextInputLayout
            android:layout_toLeftOf="@+id/cardtemp1"
            android:hint="@string/enterpass"
            android:id="@+id/til_changePass"
            android:layout_marginLeft="@dimen/smallMargin"

            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textPassword"
                android:paddingTop="@dimen/superSmallMargin"
                android:background="@color/grayItemSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cardtemp1"
            android:background="@color/grayItemSetting"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/smallMargin"
            app:cardElevation="@dimen/smallElevation"
            app:cardCornerRadius="0dp"
            app:cardUseCompatPadding="true"
            android:layout_width="@dimen/btDoneWidth"
            android:layout_height="@dimen/btDoneHeight">

            <TextView
                android:gravity="center"
                android:textSize="@dimen/settingText"
                android:textColor="@color/done"
                android:text="@string/done"
                android:id="@+id/btDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/signOut"
        app:cardBackgroundColor="@color/signOut"
        app:cardCornerRadius="0dp"
        app:cardElevation="@dimen/smallElevation"
        app:cardUseCompatPadding="true"
        android:layout_margin="@dimen/smallMargin"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingItemHeight">

        <TextView
            android:textSize="@dimen/settingText"
            android:textColor="@color/superWhite"
            android:text="@string/signout"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v7.widget.CardView>

</RelativeLayout>
